syntax = "proto3";

package event;
option go_package = "./;pb";

service AntiBruteforce {
  rpc Check (CheckRequest) returns (CheckResponse) {}
  rpc Clear (ClearRequest) returns (OK) {}
  rpc AddToList (ListRequest) returns (OK) {}
  rpc RemoveFromList (ListRequest) returns (OK) {}
}

message CheckRequest {
  string login = 1;
  string password = 2;
  string ip = 3;
}

message CheckResponse {
  bool result = 1;
}

message ClearRequest {
  string login = 1;
  string ip = 2;
}

message ListRequest {
  Subnet subnet = 1;
  ListType type = 2;
}

message Subnet {
  string ip = 1;
  string mask = 2;
}

message OK {}

enum ListType {
  BLACK = 0;
  WHITE = 1;
}